# semantic-search-engine

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  bm25_index.py  build_index.py  config.py  indexer.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  postcss.config.js
frontend/src/: App.jsx
