[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.0.1",
    "faiss-cpu==1.8.0",
    "fastapi==0.115.0",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "rank-bm25==0.2.2",
    "sentence-transformers==3.1.1",
    "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
